--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,63 @@
+alembic==1.4.2
 atomicwrites==1.4.0
 attrs==19.3.0
+blinker==1.4
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
+cryptography==3.1
+dnspython==2.0.0
+dominate==2.5.1
+email-validator==1.1.1
 enum34==1.1.10
+faunadb==4.0.1
 Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Migrate==2.5.3
+Flask-Moment==0.10.0
+Flask-SQLAlchemy==2.4.4
+Flask-Toastr==0.5.4
+Flask-WTF==0.14.3
+future==0.18.2
+h2==2.6.2
+hpack==3.0.0
+hyper==0.7.0
+hyperframe==3.2.0
+idna==2.10
 importlib-metadata==1.7.0
+iso8601==0.1.13
 itsdangerous==1.1.0
 Jinja2==2.11.2
 lxml==4.5.2
+Mako==1.1.3
 MarkupSafe==1.1.1
 more-itertools==8.4.0
+mysql-connector-python==8.0.21
 namedlist==1.7
 packaging==20.4
 pluggy==0.13.1
+protobuf==3.13.0
 py==1.9.0
+pycparser==2.20
+PyJWT==1.7.1
+PyMySQL==0.10.0
 pyparsing==2.4.7
+pyTelegramBotAPI==3.7.3
 pytest==5.4.3
 pytest-allure-adaptor==1.7.10
+python-dateutil==2.8.1
+python-editor==1.0.4
+requests==2.24.0
+schedule==0.6.0
 six==1.15.0
+SQLAlchemy==1.3.18
+urllib3==1.25.10
+visitor==0.1.3
 wcwidth==0.2.5
 Werkzeug==1.0.1
+WTForms==2.3.1
 zipp==3.1.0
