--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ pyTelegramBotAPI==3.7.3
 pytest==5.4.3
 pytest-allure-adaptor==1.7.10
 python-dateutil==2.8.1
+python-dotenv==0.15.0
 python-editor==1.0.4
 requests==2.24.0
 schedule==0.6.0
