--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Flask-SQLAlchemy==2.4.4
 Flask-Toastr==0.5.4
 Flask-WTF==0.14.3
 future==0.18.2
+gunicorn==20.0.4
 h2==2.6.2
 hpack==3.0.0
 hyper==0.7.0
