--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ namedlist==1.7
 packaging==20.4
 pluggy==0.13.1
 protobuf==3.13.0
+psycopg2-binary==2.8.6
 py==1.9.0
 pycparser==2.20
 PyJWT==1.7.1
