--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 alembic==1.4.2
+allure-pytest==2.8.40
+allure-python-commons==2.8.40
 atomicwrites==1.4.0
 attrs==19.3.0
 blinker==1.4
@@ -15,6 +17,7 @@ enum34==1.1.10
 faunadb==4.0.1
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
+Flask-CLI==0.4.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
@@ -50,12 +53,12 @@ PyMySQL==0.10.0
 pyparsing==2.4.7
 pyTelegramBotAPI==3.7.3
 pytest==5.4.3
-pytest-allure-adaptor==1.7.10
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
 requests==2.24.0
 schedule==0.6.0
+selenium==3.141.0
 six==1.15.0
 SQLAlchemy==1.3.18
 urllib3==1.25.10
